[package]
name = "static-valorant-api"
version = "0.1.0"
edition = "2021"
description = "API Wrapper for valorant-api.com"
license = "MIT"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
url = "2.5.0"
uuid = { version = "1.6.1", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
