[package]
name = "valorant-assets-api"
version = "0.1.6"
edition = "2021"
description = "API Wrapper for valorant-api.com"
license = "MIT"
repository = "https://github.com/raimannma/valorant-assets-api"
authors = ["raimannma <raimannma@outlook.de>"]
keywords = ["valorant", "api", "wrapper", "assets"]
categories = ["asynchronous", "api-bindings", "web-programming::http-client"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
url = "2.5.4"
uuid = { version = "1.16.0", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
